# expressions_evaluator

./: Cargo.toml  README.org  rustfmt.toml
src/: expression.rs  http_server.rs  main.rs  solver.rs
src/expression/: arithmetic.rs  boolean.rs  common.rs
src/expression/arithmetic/: expression.rs  factor.rs
src/expression/boolean/: expression.rs  factor.rs
src/http_server/: error.rs  request.rs  response.rs
src/http_server/test_fixtures/: happy_path.json  malformed.json  no_match.json  parsing_error.json  unknown_variable.json
